--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SubGrid – Subscription Cost Visualizer</title>
+    <title>SubMap – Subscription Cost Visualizer</title>
     <meta name="description" content="See how much time you work to pay for your subscriptions." />
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://code.iconify.design/3/3.1.1/iconify.min.js"></script>
@@ -31,26 +31,21 @@
                 darker: '#050508',
                 card: '#12121a',
                 border: '#1f1f2e',
+              },
+              pastel: {
+                pink: '#fce7f3',
+                purple: '#f3e8ff',
+                blue: '#dbeafe',
+                cyan: '#cffafe',
+                green: '#dcfce7',
+                yellow: '#fef9c3',
+                orange: '#ffedd5',
+                red: '#fee2e2',
               }
             },
             boxShadow: {
               neon: '0 0 20px rgba(0, 245, 255, 0.3)',
               'neon-pink': '0 0 30px rgba(255, 45, 149, 0.4)',
-              'neon-purple': '0 0 30px rgba(176, 38, 255, 0.4)',
-            },
-            animation: {
-              'glow': 'glow 2s ease-in-out infinite alternate',
-              'scan': 'scan 8s linear infinite',
-            },
-            keyframes: {
-              glow: {
-                '0%': { filter: 'brightness(1)' },
-                '100%': { filter: 'brightness(1.2)' },
-              },
-              scan: {
-                '0%': { transform: 'translateY(-100%)' },
-                '100%': { transform: 'translateY(100%)' },
-              },
             },
           },
         },
@@ -58,165 +53,170 @@
     </script>
     <link rel="stylesheet" href="styles.css" />
   </head>
-  <body class="min-h-screen bg-retro-dark font-sans text-white selection:bg-neon-cyan/30 selection:text-white overflow-x-hidden">
-    <!-- Retro scan lines overlay -->
+  <body class="h-screen overflow-hidden bg-retro-dark font-sans text-white selection:bg-neon-cyan/30">
+    <!-- Dark mode overlays -->
     <div class="scan-lines"></div>
-    <!-- Grid background -->
     <div class="retro-grid"></div>
     
-    <main class="relative mx-auto flex max-w-7xl flex-col gap-6 px-4 py-8 lg:flex-row lg:gap-10 lg:py-12">
-      <!-- Left Panel -->
-      <section class="space-y-5 lg:w-[400px] lg:shrink-0">
-        <header class="mb-6">
-          <h1 class="text-3xl font-bold tracking-tight">
-            <span class="text-neon-cyan">Sub</span><span class="text-neon-pink">Grid</span>
+    <div class="h-screen flex flex-col p-4 lg:p-6">
+      <!-- Header -->
+      <header class="flex items-center justify-between mb-4 lg:mb-6">
+        <div>
+          <h1 class="text-2xl lg:text-3xl font-bold tracking-tight">
+            <span class="text-neon-cyan">Sub</span><span class="text-neon-pink">Map</span>
           </h1>
-          <p class="text-sm text-gray-500 font-mono mt-1">// subscription cost visualizer</p>
-        </header>
+          <p class="text-xs text-gray-500 font-mono">// subscription cost visualizer</p>
+        </div>
+        <button onclick="toggleTheme()" id="theme-btn" class="flex items-center gap-2 px-3 py-2 rounded-lg border border-retro-border bg-retro-card text-xs font-mono text-gray-400 hover:text-neon-cyan hover:border-neon-cyan/50 transition-all">
+          <span class="iconify h-4 w-4" data-icon="ph:moon-bold"></span>
+          <span class="hidden sm:inline">theme</span>
+        </button>
+    </header>
 
-        <!-- Search Bar -->
-        <div class="relative" id="search-container">
-          <span class="iconify absolute left-4 top-1/2 h-5 w-5 -translate-y-1/2 text-gray-500 pointer-events-none" data-icon="ph:magnifying-glass"></span>
-          <input
-            type="text"
-            id="main-search"
-            placeholder="Search subscriptions..."
-            onfocus="openSearchDropdown()"
-            oninput="handleSearchInput(this.value)"
-            autocomplete="off"
-            class="w-full rounded-xl border border-retro-border bg-retro-card py-3 pl-12 pr-4 text-sm font-medium text-white placeholder:text-gray-600 focus:border-neon-cyan focus:outline-none focus:ring-1 focus:ring-neon-cyan/50 transition-all"
-          />
-          <div id="search-dropdown" class="absolute left-0 right-0 top-full z-40 mt-2 hidden max-h-[50vh] overflow-y-auto rounded-xl border border-retro-border bg-retro-card shadow-2xl"></div>
+      <!-- Main Content -->
+      <main class="flex-1 flex flex-col lg:flex-row gap-4 lg:gap-6 min-h-0">
+        <!-- Left Panel -->
+        <section class="flex flex-col gap-4 lg:w-[360px] lg:shrink-0 min-h-0">
+          <!-- Search Bar -->
+          <div class="relative" id="search-container">
+            <span class="iconify absolute left-3.5 top-1/2 h-4 w-4 -translate-y-1/2 text-gray-500 pointer-events-none" data-icon="ph:magnifying-glass"></span>
+            <input
+              type="text"
+              id="main-search"
+              placeholder="Search subscriptions..."
+              onfocus="openSearchDropdown()"
+              oninput="handleSearchInput(this.value)"
+              onkeydown="handleSearchKeydown(event)"
+              autocomplete="off"
+              class="w-full rounded-xl border border-retro-border bg-retro-card py-3 pl-10 pr-4 text-sm font-medium text-white placeholder:text-gray-600 focus:border-neon-cyan focus:outline-none focus:ring-1 focus:ring-neon-cyan/50 transition-all"
+            />
+            <div id="search-dropdown" class="absolute left-0 right-0 top-full z-40 mt-2 hidden max-h-[40vh] overflow-y-auto rounded-xl border border-retro-border bg-retro-card shadow-2xl"></div>
         </div>
 
-        <!-- Subscriptions List -->
-        <div id="sub-list-container" class="space-y-2"></div>
+          <!-- Subscriptions List (scrollable) -->
+          <div class="flex-1 min-h-0 rounded-xl border border-retro-border bg-retro-card overflow-hidden flex flex-col">
+            <div class="flex items-center justify-between px-4 py-3 border-b border-retro-border">
+              <span class="text-xs font-mono text-gray-500 uppercase tracking-wider">Subscriptions</span>
+              <button onclick="clearAllSubs()" id="clear-btn" class="hidden text-xs font-mono text-gray-500 hover:text-neon-pink transition-colors">clear</button>
+            </div>
+            <div id="sub-list-container" class="flex-1 overflow-y-auto p-2 space-y-1.5"></div>
+      </div>
 
-        <button
-          onclick="clearAllSubs()"
-          id="clear-btn"
-          class="hidden items-center gap-1.5 text-xs font-mono text-gray-500 transition-colors hover:text-neon-pink"
-        >
-          <span class="iconify h-3.5 w-3.5" data-icon="ph:trash-bold"></span>
-          clear_all()
-        </button>
-
-        <!-- Income Section -->
-        <div class="rounded-xl border border-retro-border bg-retro-card p-4">
-          <h3 class="text-sm font-bold text-gray-300 mb-3 font-mono">Your Income</h3>
-          <div class="flex gap-3">
-            <div class="flex-1">
+          <!-- Income Section -->
+          <div class="rounded-xl border border-retro-border bg-retro-card p-4">
+            <div class="text-xs font-mono text-gray-500 uppercase tracking-wider mb-3">Your Income</div>
+            <div class="flex gap-2">
               <input
                 id="income-amount"
                 type="number"
                 step="0.01"
                 placeholder="0.00"
                 oninput="handleIncomeChange()"
-                class="w-full rounded-lg border border-retro-border bg-retro-darker px-3 py-2.5 text-lg font-bold text-white placeholder:text-gray-600 focus:border-neon-cyan focus:outline-none focus:ring-1 focus:ring-neon-cyan/50 font-mono"
+                class="flex-1 min-w-0 rounded-lg border border-retro-border bg-retro-darker px-3 py-2 text-base font-bold text-white placeholder:text-gray-600 focus:border-neon-cyan focus:outline-none font-mono"
               />
+              <select
+                id="income-unit"
+                onchange="handleIncomeChange()"
+                class="rounded-lg border border-retro-border bg-retro-darker px-2 py-2 text-sm font-mono text-white focus:border-neon-cyan focus:outline-none appearance-none cursor-pointer"
+              >
+                <option value="hourly">/hr</option>
+                <option value="daily">/day</option>
+                <option value="weekly">/wk</option>
+                <option value="monthly">/mo</option>
+              </select>
             </div>
-            <select
-              id="income-unit"
-              onchange="handleIncomeChange()"
-              class="rounded-lg border border-retro-border bg-retro-darker px-3 py-2.5 text-sm font-semibold text-white focus:border-neon-cyan focus:outline-none appearance-none cursor-pointer font-mono"
-            >
-              <option value="hourly">/hour</option>
-              <option value="daily">/day</option>
-              <option value="weekly">/week</option>
-              <option value="monthly">/month</option>
-            </select>
           </div>
-          <p id="income-hint" class="mt-2 text-xs text-gray-500 font-mono"></p>
-        </div>
+        </section>
 
-        <!-- Theme Toggle -->
-        <button onclick="toggleTheme()" class="flex items-center gap-2 text-xs font-mono text-gray-500 hover:text-neon-cyan transition-colors">
-          <span class="iconify h-4 w-4" data-icon="ph:sun-bold"></span>
-          toggle_theme()
-        </button>
-      </section>
-
-      <!-- Right Panel - Grid -->
-      <section class="flex-1 min-w-0">
-        <div class="rounded-xl border border-retro-border bg-retro-card p-5 relative overflow-hidden">
-          <!-- Stats Row -->
-          <div class="flex items-end justify-between gap-4 mb-5">
-            <div>
-              <div class="text-[10px] font-mono uppercase tracking-widest text-gray-500">Monthly</div>
-              <div class="text-3xl font-black text-white font-mono" id="step-2-total">$0</div>
+        <!-- Right Panel - Map -->
+        <section class="flex-1 min-h-0 rounded-xl border border-retro-border bg-retro-card p-4 lg:p-5 flex flex-col">
+          <!-- Stats Row - All same size, centered -->
+          <div class="grid grid-cols-3 gap-4 mb-4">
+            <div class="text-center">
+              <div class="text-[10px] font-mono uppercase tracking-widest text-gray-500 mb-1">Monthly</div>
+              <div class="text-xl lg:text-2xl font-black text-white font-mono" id="step-2-total">$0</div>
             </div>
             <div class="text-center">
-              <div class="text-[10px] font-mono uppercase tracking-widest text-gray-500">Yearly</div>
-              <div class="text-xl font-bold text-neon-purple font-mono" id="step-2-yearly">$0</div>
+              <div class="text-[10px] font-mono uppercase tracking-widest text-gray-500 mb-1">Yearly</div>
+              <div class="text-xl lg:text-2xl font-bold text-neon-purple font-mono" id="step-2-yearly">$0</div>
             </div>
-            <div class="text-right">
-              <div class="text-[10px] font-mono uppercase tracking-widest text-gray-500">Work Time</div>
-              <div class="text-base font-bold text-neon-cyan font-mono" id="time-worked">—</div>
+            <div class="text-center">
+              <div class="text-[10px] font-mono uppercase tracking-widest text-gray-500 mb-1">Work Time</div>
+              <div class="text-xl lg:text-2xl font-bold text-neon-cyan font-mono" id="time-worked">—</div>
             </div>
           </div>
 
           <!-- Treemap Grid -->
-          <div id="bento-grid" class="treemap-container rounded-xl" style="aspect-ratio: 16/10;"></div>
+          <div id="bento-grid" class="treemap-container flex-1 rounded-xl"></div>
+        </section>
+      </main>
         </div>
-      </section>
-    </main>
 
     <!-- Modal -->
     <div id="modal-backdrop" class="fixed inset-0 z-50 hidden bg-black/70 opacity-0 backdrop-blur-sm transition-opacity duration-300"></div>
     <div id="modal-panel" class="pointer-events-none fixed inset-0 z-50 flex hidden items-end justify-center sm:items-center sm:p-4">
-      <div class="pointer-events-auto flex max-h-[90vh] w-full translate-y-full transform flex-col overflow-hidden rounded-t-2xl bg-retro-card border border-retro-border opacity-0 shadow-2xl transition-all duration-300 sm:max-w-md sm:translate-y-10 sm:scale-95 sm:rounded-2xl">
-        <div class="flex items-center justify-between border-b border-retro-border p-5">
-          <h3 class="text-lg font-bold text-white font-mono" id="modal-title">Add Subscription</h3>
+      <div class="pointer-events-auto flex max-h-[85vh] w-full translate-y-full transform flex-col overflow-hidden rounded-t-2xl bg-retro-card border border-retro-border opacity-0 shadow-2xl transition-all duration-300 sm:max-w-md sm:translate-y-10 sm:scale-95 sm:rounded-2xl">
+        <div class="flex items-center justify-between border-b border-retro-border p-4">
+          <h3 class="text-base font-bold text-white font-mono" id="modal-title">Add Subscription</h3>
           <button onclick="closeModal()" class="rounded-lg bg-retro-border p-2 text-gray-400 hover:text-white transition-colors">
-            <span class="iconify h-5 w-5" data-icon="ph:x-bold"></span>
+            <span class="iconify h-4 w-4" data-icon="ph:x-bold"></span>
           </button>
         </div>
 
-        <form id="sub-form" onsubmit="handleFormSubmit(event)" class="space-y-4 overflow-y-auto p-5">
+        <form id="sub-form" onsubmit="handleFormSubmit(event)" class="space-y-4 overflow-y-auto p-4">
           <input type="hidden" id="entry-id" />
 
-          <div class="flex gap-3">
-            <div id="favicon-preview" class="flex h-14 w-14 shrink-0 items-center justify-center overflow-hidden rounded-xl border border-retro-border bg-retro-darker">
-              <span class="iconify h-6 w-6 text-gray-600" data-icon="ph:globe-simple"></span>
-            </div>
+            <div class="flex gap-3">
+            <div id="favicon-preview" class="flex h-12 w-12 shrink-0 items-center justify-center overflow-hidden rounded-xl border border-retro-border bg-retro-darker">
+              <span class="iconify h-5 w-5 text-gray-600" data-icon="ph:globe-simple"></span>
+              </div>
             <div class="flex-1 space-y-2">
-              <input type="text" id="name" required placeholder="Service name" class="block w-full rounded-lg border border-retro-border bg-retro-darker px-3 py-2.5 text-base font-semibold text-white placeholder:text-gray-600 focus:border-neon-cyan focus:outline-none" />
-              <input type="text" id="url" placeholder="website.com" oninput="updateFavicon(this.value)" class="block w-full rounded-lg border border-retro-border bg-retro-darker px-3 py-2 text-sm text-gray-300 placeholder:text-gray-600 focus:border-neon-cyan focus:outline-none" />
+              <input type="text" id="name" required placeholder="Service name" class="block w-full rounded-lg border border-retro-border bg-retro-darker px-3 py-2 text-sm font-semibold text-white placeholder:text-gray-600 focus:border-neon-cyan focus:outline-none" />
+              <input type="text" id="url" placeholder="website.com" oninput="updateFavicon(this.value)" class="block w-full rounded-lg border border-retro-border bg-retro-darker px-3 py-1.5 text-xs text-gray-300 placeholder:text-gray-600 focus:border-neon-cyan focus:outline-none" />
             </div>
           </div>
 
           <div class="grid grid-cols-2 gap-3">
             <div>
-              <label class="mb-1 block text-xs font-mono text-gray-500">Price</label>
-              <input type="number" id="price" required step="0.01" placeholder="0.00" class="block w-full rounded-lg border border-retro-border bg-retro-darker px-3 py-2.5 text-base font-bold text-white focus:border-neon-cyan focus:outline-none font-mono" />
+              <label class="mb-1 block text-[10px] font-mono text-gray-500 uppercase">Price</label>
+              <input type="number" id="price" required step="0.01" placeholder="0.00" class="block w-full rounded-lg border border-retro-border bg-retro-darker px-3 py-2 text-sm font-bold text-white focus:border-neon-cyan focus:outline-none font-mono" />
             </div>
             <div>
-              <label class="mb-1 block text-xs font-mono text-gray-500">Cycle</label>
-              <select id="cycle" class="block w-full rounded-lg border border-retro-border bg-retro-darker px-3 py-2.5 text-base font-semibold text-white focus:border-neon-cyan focus:outline-none appearance-none">
-                <option value="Monthly">Monthly</option>
-                <option value="Yearly">Yearly</option>
-                <option value="Weekly">Weekly</option>
-              </select>
-            </div>
+              <label class="mb-1 block text-[10px] font-mono text-gray-500 uppercase">Cycle</label>
+              <select id="cycle" class="block w-full rounded-lg border border-retro-border bg-retro-darker px-3 py-2 text-sm font-semibold text-white focus:border-neon-cyan focus:outline-none appearance-none">
+              <option value="Monthly">Monthly</option>
+              <option value="Yearly">Yearly</option>
+              <option value="Weekly">Weekly</option>
+            </select>
+          </div>
           </div>
 
           <div>
-            <label class="mb-1.5 block text-xs font-mono text-gray-500">Color</label>
-            <div class="grid grid-cols-6 gap-2" id="color-selector"></div>
+            <label class="mb-1.5 block text-[10px] font-mono text-gray-500 uppercase">Color</label>
+            <div class="grid grid-cols-8 gap-1.5" id="color-selector"></div>
             <input type="hidden" id="selected-color" value="" />
           </div>
           <input type="hidden" id="date" value="" />
 
-          <button type="submit" class="w-full rounded-lg bg-neon-cyan py-3 font-bold text-retro-dark transition-all hover:shadow-neon active:scale-[0.98] font-mono">
+          <button type="submit" class="w-full rounded-lg bg-neon-cyan py-2.5 text-sm font-bold text-retro-dark transition-all hover:shadow-neon active:scale-[0.98] font-mono">
             save()
           </button>
         </form>
       </div>
     </div>
 
+    <!-- Audio elements for retro sounds -->
+    <audio id="sound-add" preload="auto">
+      <source src="data:audio/wav;base64,UklGRnoGAABXQVZFZm10IBAAAAABAAEAQB8AAEAfAAABAAgAZGF0YQoGAACBhYqFbF1bYXt/gHJ0d3d6fH18fn6AgYF/fYCAf36AgIB+fn19fX1+fn5+f39+fn5+fn5+fn5+fn5+fn5+fn5+fn5+" type="audio/wav">
+    </audio>
+    <audio id="sound-remove" preload="auto">
+      <source src="data:audio/wav;base64,UklGRl9vT19teleUklGRl9vT19teleUklGRl9vT19tele" type="audio/wav">
+    </audio>
+
     <script src="js/presets.js"></script>
     <script src="js/storage.js"></script>
     <script src="js/treemap.js"></script>
+    <script src="js/sounds.js"></script>
     <script src="js/app.js"></script>
     <script src="js/modals.js"></script>
   </body>
