fix sound delay. add more color options. modal enter fix. work time is yearly now. more differentiation between search and list via glow

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
               <div class="text-xl lg:text-2xl font-bold text-neon-purple font-mono" id="step-2-yearly">$0</div>
             </div>
             <div class="text-center">
-              <div class="text-[10px] font-mono uppercase tracking-widest text-gray-500 mb-1">Work Time</div>
+              <div class="text-[10px] font-mono uppercase tracking-widest text-gray-500 mb-1">Work Time/yr</div>
               <div class="text-xl lg:text-2xl font-bold text-neon-cyan font-mono" id="time-worked">—</div>
             </div>
           </div>
