--- a/index.html
+++ b/index.html
@@ -61,12 +61,12 @@
         </button>
       </header>
 
-      <!-- Main Content -->
-      <main class="flex-1 flex flex-col lg:flex-row gap-4 lg:gap-6">
-        <!-- Left Panel -->
-        <section class="flex flex-col gap-4 lg:w-[360px] lg:shrink-0">
+      <!-- Main Content - Both panels stretch to same height -->
+      <main class="flex-1 flex flex-col lg:flex-row gap-4 lg:gap-6 lg:items-stretch">
+        <!-- Left Panel - Flex column that stretches -->
+        <section class="flex flex-col gap-4 lg:w-[360px] lg:shrink-0 lg:self-stretch">
           <!-- Search Bar -->
-          <div class="relative" id="search-container">
+          <div class="relative shrink-0" id="search-container">
             <span class="iconify absolute left-3.5 top-1/2 h-4 w-4 -translate-y-1/2 text-gray-500 pointer-events-none" data-icon="ph:magnifying-glass"></span>
             <input
               type="text"
@@ -82,8 +82,8 @@
             <div id="search-dropdown" class="absolute left-0 right-0 top-full z-40 mt-2 hidden max-h-[40vh] overflow-y-auto rounded-xl shadow-2xl"></div>
           </div>
 
-          <!-- Subscriptions List -->
-          <div class="rounded-xl border border-retro-border bg-retro-card overflow-hidden flex flex-col" style="min-height: 200px; max-height: 50vh;">
+          <!-- Subscriptions List - Flex to fill remaining space -->
+          <div class="flex-1 min-h-[200px] rounded-xl border border-retro-border bg-retro-card overflow-hidden flex flex-col">
             <div class="flex items-center justify-between px-4 py-3 border-b border-retro-border shrink-0">
               <span class="text-xs font-mono text-gray-500 uppercase tracking-wider">Subscriptions</span>
               <button onclick="clearAllSubs()" id="clear-btn" class="hidden text-xs font-mono text-gray-500 hover:text-neon-pink transition-colors">clear</button>
@@ -91,7 +91,7 @@
             <div id="sub-list-container" class="flex-1 overflow-y-auto p-2 space-y-1.5"></div>
           </div>
 
-          <!-- Income Section -->
+          <!-- Income Section - Fixed at bottom -->
           <div class="rounded-xl border border-retro-border bg-retro-card p-4 shrink-0">
             <div class="text-xs font-mono text-gray-500 uppercase tracking-wider mb-3">Your Income</div>
             <div class="flex gap-2">
@@ -118,7 +118,7 @@
         </section>
 
         <!-- Right Panel - Map -->
-        <section class="flex-1 rounded-xl border border-retro-border bg-retro-card p-4 lg:p-5 flex flex-col" style="min-height: 400px;">
+        <section class="flex-1 min-h-[400px] rounded-xl border border-retro-border bg-retro-card p-4 lg:p-5 flex flex-col">
           <!-- Stats Row -->
           <div class="grid grid-cols-3 gap-4 mb-4 shrink-0">
             <div class="text-center">
