fix scaling for full screen and mobile. delete button turns red when hovered over

--- a/index.html
+++ b/index.html
@@ -37,11 +37,12 @@
     </script>
     <link rel="stylesheet" href="styles.css" />
   </head>
-  <body class="h-screen overflow-hidden bg-retro-dark font-sans text-white selection:bg-neon-cyan/30">
+  <body class="min-h-screen bg-retro-dark font-sans text-white selection:bg-neon-cyan/30">
     <div class="scan-lines"></div>
     <div class="retro-grid"></div>
     
-    <div class="h-screen flex flex-col p-4 lg:p-6">
+    <!-- Desktop: h-screen no scroll. Mobile: min-h-screen allows scroll -->
+    <div class="flex flex-col p-4 lg:p-6 min-h-screen lg:h-screen lg:overflow-hidden">
       <!-- Header -->
       <header class="flex items-center justify-between mb-4 shrink-0">
         <div>
@@ -56,10 +57,10 @@
         </button>
       </header>
 
-      <!-- Main Content - Fixed height, no scroll -->
-      <main class="flex-1 flex flex-col lg:flex-row gap-4 lg:gap-6 min-h-0">
+      <!-- Main Content -->
+      <main class="flex-1 flex flex-col lg:flex-row gap-4 lg:gap-6 lg:min-h-0">
         <!-- Left Panel -->
-        <section class="flex flex-col gap-3 lg:w-[340px] lg:shrink-0 min-h-0">
+        <section class="flex flex-col gap-3 lg:w-[340px] lg:shrink-0 lg:min-h-0">
           <!-- Search Bar -->
           <div class="relative shrink-0" id="search-container">
             <span class="iconify absolute left-3.5 top-1/2 h-4 w-4 -translate-y-1/2 text-gray-500 pointer-events-none" data-icon="ph:magnifying-glass"></span>
@@ -78,7 +79,7 @@
           </div>
 
           <!-- Subscriptions List -->
-          <div class="flex-1 min-h-0 rounded-lg border border-retro-border bg-retro-card overflow-hidden flex flex-col">
+          <div class="flex-1 lg:min-h-0 rounded-lg border border-retro-border bg-retro-card overflow-hidden flex flex-col" style="min-height: 180px; max-height: 50vh;">
             <div class="flex items-center justify-between px-3 py-2 border-b border-retro-border shrink-0">
               <span class="text-[10px] font-mono text-gray-500 uppercase tracking-wider">Subscriptions</span>
               <button onclick="clearAllSubs()" id="clear-btn" class="hidden text-[10px] font-mono text-gray-500 hover:text-neon-pink transition-colors">clear</button>
@@ -113,7 +114,7 @@
         </section>
 
         <!-- Right Panel - Map -->
-        <section class="flex-1 min-h-0 rounded-lg border border-retro-border bg-retro-card p-4 flex flex-col">
+        <section class="flex-1 lg:min-h-0 rounded-lg border border-retro-border bg-retro-card p-4 flex flex-col" style="min-height: 350px;">
           <!-- Stats Row -->
           <div class="grid grid-cols-3 gap-4 mb-3 shrink-0">
             <div class="text-center">
@@ -131,7 +132,7 @@
           </div>
 
           <!-- Treemap Grid -->
-          <div id="bento-grid" class="treemap-container flex-1 min-h-0 rounded-lg"></div>
+          <div id="bento-grid" class="treemap-container flex-1 rounded-lg"></div>
         </section>
       </main>
     </div>
